objects/ASI_CRM_JP_Sales_Order_Item__c.object
<CustomObject>
    <description>This Sales Order Item is for PRJ specific use.</description>
    <fields>
        <fullName>ASI_CRM_AP_Code__c</fullName>
        <label>AP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Available_Quantity__c</fullName>
        <formula>ASI_CRM_SKU_Item__r.ASI_Quantity_Availability__c</formula>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Brand_Code__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_TH_CRM_Brand_Code__c</formula>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Name__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_CRM_JP_English_Name__c</formula>
        <label>English Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Extended_Price__c</fullName>
        <formula>IF(  ISPICKVAL(ASI_CRM_UOM__c , &apos;CASE&apos;) ,
      ASI_CRM_Unit_Price__c *  ASI_CRM_Quantity__c *  ASI_CRM_JP_Sys_Packaging_Size__c  ,
     IF( ISPICKVAL(ASI_CRM_UOM__c , &apos;BT&apos;) ,
          ASI_CRM_Unit_Price__c *  ASI_CRM_Quantity__c ,
         0
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Base_Price__c</fullName>
        <label>Approved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Bottle_Size__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Std_Bottle_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottle Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Extended_Weight__c</fullName>
        <formula>IF(  ISPICKVAL(ASI_CRM_UOM__c , &apos;CASE&apos;) ,
      ASI_CRM_SKU__r.ASI_HK_CRM_Packaging_Size__c *  ASI_CRM_SKU__r.ASI_CRM_Unit_Weight_Kg__c *  ASI_CRM_Quantity__c ,
     IF( ISPICKVAL(ASI_CRM_UOM__c , &apos;BT&apos;) ,
          ASI_CRM_SKU__r.ASI_CRM_Unit_Weight_Kg__c *  ASI_CRM_Quantity__c ,
         0
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Item_Description_1__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_CRM_Item_Description1__c</formula>
        <label>Item Description 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Item_Description_2__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_CRM_Item_Description2__c</formula>
        <label>Item Description 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Lower_than_Base_Price__c</fullName>
        <formula>IF( ASI_CRM_Unit_Price__c &lt;  ASI_CRM_JP_Base_Price__c ,
   &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Lower than Approved Price?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Packaging_Size__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Packaging_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sys_Lookup_Filter__c</fullName>
        <label>Sys Lookup Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASI_CRM_JP_Normal_SO</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Sample_Sales</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Marketing_FOC</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Entertainment_Sales</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Employee_Sales</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Direct_Sales</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Duty_Free_SO</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Normal_SO_Locked</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Sample_Sales_Locked</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Marketing_FOC_Locked</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Entertainment_Sales_Locked</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Employee_Sales_Locked</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Direct_Sales_Locked</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Duty_Free_SO_Locked</fullName>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Manual_JDE_SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sys_Packaging_Size__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sys Packaging Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MFM_PO_No__c</fullName>
        <label>MFM PO No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>Item availability not match warehouse</errorMessage>
            <filterItems>
                <field>ASI_CRM_JP_Item_Availability__c.ASI_Warehouse_Location__c</field>
                <operation>equals</operation>
                <valueField>$Source.ASI_CRM_Sys_Item_Availability_Filter__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_JP_Item_Availability__c</referenceTo>
        <relationshipLabel>Sales Order Items</relationshipLabel>
        <relationshipName>Sales_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>Inactive SKU or SKU not available for this SO type</errorMessage>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.ASI_HK_CRM_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Sales Order Items</relationshipLabel>
        <relationshipName>Sales_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Order__c</fullName>
        <label>Sales Order</label>
        <referenceTo>ASI_CRM_JP_Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Items</relationshipLabel>
        <relationshipName>Sales_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sorting_Number__c</fullName>
        <label>Sorting Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>520-Ready</fullName>
                </value>
                <value>
                    <fullName>560-Sent to Mitsubishi</fullName>
                </value>
                <value>
                    <fullName>620-Ship Confirm</fullName>
                </value>
                <value>
                    <fullName>980-Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Create_by_Manual_Input__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in lookup filter to ensure logic is only applied through manual input by user</description>
        <label>Sys Create by Manual Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Item_Availability_Filter__c</fullName>
        <label>Sys Item Availability Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>119</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>131</fullName>
                </value>
                <value>
                    <fullName>134</fullName>
                </value>
                <value>
                    <fullName>136</fullName>
                </value>
                <value>
                    <fullName>137</fullName>
                </value>
                <value>
                    <fullName>138</fullName>
                </value>
                <value>
                    <fullName>139</fullName>
                </value>
                <value>
                    <fullName>190</fullName>
                </value>
                <value>
                    <fullName>711</fullName>
                </value>
                <value>
                    <fullName>411</fullName>
                </value>
                <value>
                    <fullName>421</fullName>
                </value>
                <value>
                    <fullName>426</fullName>
                </value>
                <value>
                    <fullName>611</fullName>
                </value>
                <value>
                    <fullName>612</fullName>
                </value>
                <value>
                    <fullName>618</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Item_Quantity_Filter__c</fullName>
        <label>Sys Item Quantity Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>CASE</fullName>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Order Item</label>
    <nameField>
        <displayFormat>SOIN-{00000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_Check_Negative_Price</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c) ,
    ASI_CRM_Unit_Price__c &lt; 0)</errorConditionFormula>
        <errorMessage>Negative unit price is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Check_Non_Positive_Qty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c) ,
   ASI_CRM_Quantity__c &lt;= 0)</errorConditionFormula>
        <errorMessage>Negative or zero quantity is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_No_Decimal</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(TEXT( ASI_CRM_Quantity__c ),&apos;.&apos;)</errorConditionFormula>
        <errorMessage>Quantity cannot contain any decimal place</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Positive_Sorting_Number</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ASI_CRM_Sorting_Number__c &lt; 0, True, False)</errorConditionFormula>
        <errorMessage>Sorting Number can be Positive only.</errorMessage>
    </validationRules>
</CustomObject>